# gangaji

./: .gitattributes  .gitignore  .goreleaser.yaml  MODULE.aspect  README.md  flamegraph.html  go.mod  go.sum  index.html  landing.html  profile.axl
.github/workflows/: release.yml  tag.yml
cmd/gangaji/: flamegraph.html  main.go
cmd/gangaji/datalog/: builtins.go  engine.go  facts.go  lexer.go  parser.go  types.go
cmd/gangaji/suggestions/: evaluator.go
cmd/gangaji/suggestions/rules/: schema.dl
cmd/gangaji/suggestions/rules/builtin/: critical_path.dl  fetch_deps.dl  gc_pressure.dl  link_heavy.dl  long_tail.dl  package_loading.dl  parallelism.dl  repeated_actions.dl  slow_actions.dl  starlark_hotspots.dl  success.dl  test_bottleneck.dl
docs/: technical.html
example/: .bazelrc  BUILD.bazel  MODULE.aspect  MODULE.bazel  README.md  defs.bzl
example/lib/: BUILD.bazel  lib_defs.bzl  math.cc  math.h  strings.cc  strings.h  utils.cc  utils.h
example/src/: BUILD.bazel  main.cc  math_test.cc  strings_test.cc
